--- a/views/partials/UserHeader.ejs
+++ b/views/partials/UserHeader.ejs
@@ -26,7 +26,8 @@
                 <img src="/images/logo-user.svg" alt="" style="width: 40px;">
             </div>
             <div class="list-group list-group-flush d-grid gap-3 mt-4">
-                <a href="/dashboard" class="side-nav-item text-white"><img src="/images/Dashboard-nav.svg" alt=""></a>
+                <a href="/dashboard" class="side-nav-item text-white"><img src="/images/Dashboard-nav.svg" alt="" width="30px"></a>
+                <a href="/add-new-plant" class="side-nav-item text-white"><img src="/images/add-plant.svg" alt=""></a>
                 <a href="/plant-identification" class="side-nav-item text-white"><img src="/images/scan-helper.svg" alt=""></a>
                 <a href="/posts" class="side-nav-item text-white"><img src="/images/account-group.svg" alt=""></a>
                 <a href="/email" class="side-nav-item text-white"><img src="/images/email-outline.svg" alt=""></a>
