--- a/public/styles/user.css
+++ b/public/styles/user.css
@@ -366,6 +366,7 @@ a{
   #sidebar-wrapper {
     min-height: 100vh;
     margin-left: -5.3rem;
+    overflow-y: auto; /* Enable scrolling if needed */
     transition: margin 0.25s ease-out;
 }
 
@@ -425,3 +426,21 @@ a{
     position: relative; 
     right: 20px;
 }
+
+/* TUTORIAL PAGE */
+
+
+#tut1{
+    min-height: 100vh;
+    background-image: url(/images/tutorial1.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    background-position: center; /* Keeps the image centered */
+}
+#tut1.container{
+    width: 100%;
+    height: 100%;
+}
+
+/*  */
