--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,138 +1,147 @@
 <%- include("partials/UserHeader.ejs") %>
 
-       <!-- Page Content -->
-        <div class="container-fluid hidden-scroll " > 
+<!-- Page Content -->
+<div class="container-fluid hidden-scroll"> 
 
-            <section class="weather-section">
+    <section class="weather-section">
 
-                <div class="row nexa-black gap-4 d-flex justify-content-center m-2">
-                    <div class="col-lg-7 d-flex gap-3 flex-column ">
-                        <div class="p-4 center-items weather-card b-radius-50 ">
-                            <div>
-                                <div class="d-flex align-items-center">
-                                    <img src="images/location-icon.svg" alt="">
-                                    <p class="h2 fs-30 m-0">Vinzons, Camarines Norte</p>
-                                </div>
-                                <p class="arial fs-14"><strong><%= day %>,</strong>  <%= dateToday %></p>
-                                <p class="fs-80"><%= weather.main.temp %>°</p>
-                            </div>
-                            <div>
-                                <img class="weather-icon-lg" src="images/weather-icons/<%=weather.weather[0].main %>.svg" alt="" >
-                            </div>
-                        </div>
-
-                        <div class="arial p-4 weather-card b-radius-50">
-                            <div class="p-3">
-                                <h3>5-Day Forecast</h3>
-                            </div>
-                            
-                            <div class="px-2 overflow-x-auto">                
-                                <!-- 5-Day Weather Forecast -->
-                                <div class="forecast-container d-flex justify-content-around">
-                                  <% forecast.forEach(day => { %>
-                                    <div class="forecast-day d-flex justify-content-center flex-column align-items-center">
-                                      <p><%= new Date(day.dt_txt).toLocaleDateString('en-US', { weekday: 'long' }) %></p>
-                                      <img src="https://openweathermap.org/img/wn/<%= day.weather[0].icon %>@2x.png" alt="Weather Icon">
-                                      <p><%= day.main.temp %> °C</p>
-                                    </div>
-                                  <% }) %>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 p-4 weather-card b-radius-50">
+        <div class="row nexa-black gap-4 d-flex justify-content-center m-2">
+            <div class="col-lg-7 d-flex gap-3 flex-column">
+                <div class="p-4 center-items weather-card b-radius-50">
+                    <div>
                         <div class="d-flex align-items-center">
-                            <img src="/images/todo-icon.svg" alt="">
-                            <p class="m-0 gray-text todo-text">To do list</p>
+                            <img src="images/location-icon.svg" alt="">
+                            <p class="h2 fs-30 m-0">Vinzons, Camarines Norte</p>
                         </div>
-                        <div class="px-4">
-                            <p>askdjhaksdksajhd</p>
-                            <p>askdjhaksdksajhd</p>
-                            <p>askdjhaksdksajhd</p>
-
-                        </div>
-                      
+                        <p class="arial fs-14"><strong><%= day %>,</strong>  <%= dateToday %></p>
+                        <p class="fs-80"><%= weather.main.temp %>°</p>
                     </div>
-                </div>    
-            </section>
-          
+                    <div>
+                        <img class="weather-icon-lg" src="images/weather-icons/<%= weather.weather[0].main %>.svg" alt="">
+                    </div>
+                </div>
 
-            <section id="my-plants">
-                <div class="row gap-4 mt-3 d-flex justify-content-center mx-2">
-                    <div class="col-lg-7 col-md-12 d-flex gap-3 flex-column">
-                        <div class="col p-4 weather-card b-radius-50 ">
-
-                                <p class="h5">Plants That Need to Be Watered</p>
-                                <% if(locals.plant){ %>
-                                    <div class="container-water d-flex gap-3">
-                                        <% plants.filter(plant => plant.needsWatering).forEach(plant => { %>
-                                            <div class="not-watered-plants">
-                                                <%= plant.name %>
-                                                <form action="/water-plant/<%= plant._id %>" method="POST" style="display: inline">
-                                                    <button type="submit" class="btn btn-success btn-sm ml-2">Water</button>
-                                                </form>
-                                                <p style="width: 300px;">Last Watered: <%= plant.lastWatered ? new Date(plant.lastWatered).toLocaleDateString() : 'Not yet watered' %></p>
-                                            </div>
-                                        <% }) %>
-                                    </div>
-                                <% }else{ %>
-                                    <p>Nice, all plants are hydrated.</p>
-                                <% } %>
-                                <div class="d-flex align-items-center mt-2">
-                                    <img src="/images/my-plants.svg" alt="">
-                                    <p class="h5 m-0">My Plants</p>
+                <div class="arial p-4 weather-card b-radius-50">
+                    <div class="p-3">
+                        <h3>5-Day Forecast</h3>
+                    </div>
+                    <div class="px-2 overflow-x-auto">                
+                        <!-- 5-Day Weather Forecast -->
+                        <div class="forecast-container d-flex justify-content-around">
+                            <% forecast.forEach(day => { %>
+                                <div class="forecast-day d-flex justify-content-center flex-column align-items-center">
+                                    <p><%= new Date(day.dt_txt).toLocaleDateString('en-US', { weekday: 'long' }) %></p>
+                                    <img src="https://openweathermap.org/img/wn/<%= day.weather[0].icon %>@2x.png" alt="Weather Icon">
+                                    <p><%= day.main.temp %> °C</p>
                                 </div>
-                            <div class="table-responsive">
-                                <% if (plants && plants.length > 0) { %>
-                                    <table id="plantsTable" class="table table-striped">
-                                        <thead>
-                                                <tr>
-                                                    <th>ID</th>
-                                                    <th>Plant Name</th>
-                                                    <th>Location</th>
-                                                    <th>Estimated Harvest Time</th>
-                                                    <th>Current Stage</th>
-                                                </tr>
-                                        </thead>
-                                        <tbody>
-                                            <% plants.forEach(plant => { %>
-                                                <tr>
-                                                    <td><%= plant.customId %></td> <!-- Display the plant's customId -->
-                                                    <td><%= plant.name %></td>
-                                                    <td><%= plant.location %></td>
-                                                    <td><%= new Date(plant.estimatedHarvestTime).toLocaleDateString('en-GB', { day: '2-digit', month: 'short', year: 'numeric' }) %></td>
-                                                    <td><%= plant.growthStage %></td>
-                                                </tr>
-                                            <% }) %>
-                                        </tbody>
-                                    </table>
-                                  <% } else { %>
-                                    <p>No plants found. Start by adding a new plant!</p>
-                                <% } %>
-                            </div>
-
+                            <% }) %>
                         </div>
+                    </div>
+                </div>
+            </div>
 
-                       
+            <div class="col-lg-4 p-4 weather-card b-radius-50">
+                <div class="d-flex align-items-center">
+                    <img src="/images/todo-icon.svg" alt="">
+                    <p class="m-0 gray-text todo-text">To do list</p>
+                </div>
+                <div class="px-4">
+                    <p>askdjhaksdksajhd</p>
+                    <p>askdjhaksdksajhd</p>
+                    <p>askdjhaksdksajhd</p>
+                </div>
+            </div>
+        </div>    
+    </section>
+
+    <section id="my-plants">
+        <div class="row gap-4 mt-3 d-flex justify-content-center mx-2">
+            <div class="col-lg-7 col-md-12 d-flex gap-3 flex-column">
+                <div class="col p-4 weather-card b-radius-50 ">
+
+                    <p class="h5">Plants That Need to Be Watered</p>
+                    <% if(locals.plant){ %>
+                        <div class="container-water d-flex gap-3">
+                            <% plants.filter(plant => plant.needsWatering).forEach(plant => { %>
+                                <div class="not-watered-plants">
+                                    <%= plant.name %>
+                                    <form action="/water-plant/<%= plant._id %>" method="POST" style="display: inline">
+                                        <button type="submit" class="btn btn-success btn-sm ml-2">Water</button>
+                                    </form>
+                                    <p style="width: 300px;">Last Watered: <%= plant.lastWatered ? new Date(plant.lastWatered).toLocaleDateString() : 'Not yet watered' %></p>
+                                </div>
+                            <% }) %>
+                        </div>
+                    <% }else{ %>
+                        <p>Nice, all plants are hydrated.</p>
+                    <% } %>
+
+                    <div class="d-flex align-items-center mt-2">
+                        <img src="/images/my-plants.svg" alt="">
+                        <p class="h5 m-0">My Plants</p>
                     </div>
 
-                    <div class="col-lg-4 col-md-12 p-4 weather-card b-radius-50 ">
-                       
-                        <p>Soil Status</p>
-                      
+                    <div class="table-responsive">
+                        <% if (plants && plants.length > 0) { %>
+                            <table id="plantsTable" class="table table-striped">
+                                <thead>
+                                    <tr>
+                                        <th>ID</th>
+                                        <th>Plant Name</th>
+                                        <th>Location</th>
+                                        <th>Estimated Harvest Time</th>
+                                        <th>Current Stage</th>
+                                        <th>Verify Stage</th> <!-- New column for verification -->
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <% plants.forEach(plant => { %>
+                                        <tr>
+                                            <td><%= plant.customId %></td>
+                                            <td><%= plant.name %></td>
+                                            <td><%= plant.location %></td>
+                                            <td><%= new Date(plant.estimatedHarvestTime).toLocaleDateString('en-GB', { day: '2-digit', month: 'short', year: 'numeric' }) %></td>
+                                            <td>   <%= plant.growthStage && plant.growthStage.trim() !== '' ? plant.growthStage : plant.computedGrowthStage %></td>
+                                            <td>
+                                                <!-- User can verify or adjust the growth stage -->
+                                                <form action="/update-growth-stage/<%= plant._id %>" method="POST">
+                                                    <label class="form-label" for="userGrowthStage">Is this stage accurate?</label>
+                                                    <div class="d-flex">
+                                                        <select class="form-control" name="userGrowthStage" id="userGrowthStage">
+                                                            <option value="sprout">Sprout</option>
+                                                            <option value="seedling">Seedling</option>
+                                                            <option value="vegetating">Vegetating</option>
+                                                            <option value="budding">Budding</option>
+                                                            <option value="flowering">Flowering</option>
+                                                            <option value="ripening">Ripening</option>
+                                                            <option value="harvesting">Harvesting</option>
+                                                        </select>
+                                                        <button type="submit" class="btn btn-primary btn-sm">Update</button>
+                                                    </div>
+                                                  
+                                                </form>
+                                            </td>
+                                        </tr>
+                                    <% }) %>
+                                </tbody>
+                            </table>
+                        <% } else { %>
+                            <p>No plants found. Start by adding a new plant!</p>
+                        <% } %>
                     </div>
-                </div>    
-            </section>
 
-            
-          
-          
-        </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-12 p-4 weather-card b-radius-50">
+                <p>Soil Status</p>
+            </div>
+        </div>    
+    </section>
+
 </div>
 <!-- /#page-content-wrapper -->
 </div>
 <!-- /#wrapper -->
-
 
 <%- include("partials/UserFooter.ejs") %>
