--- a/views/partials/AdminHeader.ejs
+++ b/views/partials/AdminHeader.ejs
@@ -32,6 +32,9 @@
                                              <a class="nav-link active" aria-current="page" href="/admin">Dashboard</a>
                                         </li>
                                         <li class="nav-item">
+                                             <a class="nav-link active" aria-current="page" href="/plant-collection">Plant Collection</a>
+                                        </li>
+                                        <li class="nav-item">
                                              <a class="nav-link active" aria-current="page" href="/logout">Logout</a>
                                         </li>
                                    </ul>
