soil moisture added

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -134,7 +134,8 @@
             </div>
 
             <div class="col-lg-4 col-md-12 p-4 weather-card b-radius-50">
-                <p>Soil Status</p>
+                <p class="h2">Soil Status </p>
+                <p class="h3 bold"><%= soilMoistureValue %></p>
             </div>
         </div>    
     </section>
