fix sidebar overflow

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -134,7 +134,7 @@
                         <tr>
                             <th>Location</th>
                             <th>Moisture Level</th>
-                            <th>Status</th> <!-- New Status Column -->
+                            <th>Status</th>
                         </tr>
                     </thead>
                     <tbody id="soilMoistureTableBody">
